# QtUtil

./: .gitignore  README.md
QUdpSockets/: .gitignore  CMakeLists.txt
QUdpSockets/include/: QUdpServer.cpp  QUdpServer.h
QUdpSockets/scripts/: Build.sh
QUdpSockets/src/: main.cpp
QmlInterface/: MainClass.cpp  MainClass.h  QmlInterface.cpp  QmlInterface.h  QmlInterface.pro  main.cpp  main.qml
